--- a/app/src/main/res/layout/item_cardview_kerajaan.xml
+++ b/app/src/main/res/layout/item_cardview_kerajaan.xml
@@ -47,6 +47,7 @@
             android:layout_marginRight="@dimen/activity_vertical_margin"
             android:layout_marginLeft="@dimen/activity_vertical_margin"/>
         <LinearLayout
+            android:id="@+id/list_linier"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
